<resources>
    <string name="app_name">AirSend</string>
    <string name="send">Send</string>
    <string name="hello">Hello</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="open_camera">Open camera</string>
    <string name="device_info">Device info</string>
    <string name="received_none_yet">Received: None yet</string>
    <string name="incoming_messages">Incoming messages</string>
    <string name="message">Message</string>
    <string name="port">Port</string>
    <string name="outgoing_messages">Outgoing messages</string>
    <string name="start">Start</string>
    <string name="restart_app">Restart</string>
    <string name="view_connections">View connections</string>
    <string name="go_back">Go back</string>
    <string name="devices_you_are_connected_to">Devices you are connected to</string>
    <string name="clipboard_sharing">Clipboard sharing</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="connections">Connections</string>
    <string name="messages">Messages</string>
    <string name="made_by_cherrydev">Made by CherryDev</string>
    <string name="licenses">Licenses</string>
    <string name="last_used_port">last_used_port</string>
    <string name="preference_file_key">com.cherrydev.airsend.prefs</string>
    <string name="close">Close</string>
    <string name="kill_app">Kill</string>
    <string name="already_done">Already done</string>
    <string name="connect_to_device">Connect to device</string>

    <string name="setting_connect_to_known">setting_connect_to_known</string>
    <string name="setting_close_client_socket">setting_close_client_socket</string>
    <string name="setting_start_on_boot">setting_start_on_boot</string>
    <string name="disable_battery_optimization">Disable battery optimization</string>
    <string name="setting_send_clipboard">setting_send_clipboard</string>
    <string name="setting_show_notifications">setting_show_notifications</string>
    <string name="setting_device_name">setting_device_name</string>
    <string name="setting_show_notifications_message">setting_show_notifications_message</string>


    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="airsend_will_reestablish_connection_with_your_other_devices_when_you_reconnect_to_your_saved_network">AirSend will reestablish connection with your other devices when you reconnect to your saved network.</string>
    <string name="connect_to_known_devices_automatically">Connect to known devices automatically</string>
    <string name="this_name_will_show_up_in_other_devices">This name will show up in other devices</string>
    <string name="device_name">Device name</string>
    <string name="connection_related_settings">Connection related settings</string>
    <string name="background_run_reason">AirSend needs to be able to run in the background so you could receive messages.\n\nSome manufacturers deliberately prevent apps from running in the background, only giving exceptions to large apps.\n\nTo allow AirSend to work, please disable battery optimization.\n\nMore: https://dontkillmyapp.com/</string>
    <string name="general">General</string>
    <string name="show_connection_notifications">Show connection notifications</string>
    <string name="you_will_see_a_notification_when_a_device_connects_and_disconnects">You will see a notification when a device connects and disconnects</string>
    <string name="regenerate">Regenerate</string>
    <string name="about_app_and_licenses">About app and licenses</string>
    <string name="about">About</string>
    <string name="regenerate_certificate">Regenerate certificate</string>
    <string name="these_settings_will_take_effect_after_app_restart">These settings will take effect after app restart</string>
    <string name="advanced">Advanced</string>
    <string name="when_you_share_text_to_airsend_you_can_choose_to_send_it_to_your_connected_devices_or_be_asked_each_time_which_devices_to_send_to">When you share text to AirSend, you can choose to send it to your saved devices or be asked each time which devices to send to.</string>
    <string name="always_ask">Always ask</string>
    <string name="send_to_saved_devices">Send to saved devices</string>
    <string name="ask_to_select_recipient">Ask to select recipient</string>
    <string name="you_will_see_a_notification_when_you_get_a_message">You will see a notification when you get a message</string>
    <string name="show_message_notifications">Show message notifications</string>
    <string name="you_cannot_enter_commas_device_name">You cannot enter commas in device name</string>
    <string name="modify_your_notification_preferences">Modify your notification preferences</string>
    <string name="please_fill_in_all_required_fields">Please fill in all required fields</string>
    <string name="message_sent">Message sent!</string>
    <string name="please_select_a_recipient">Please select a recipient</string>
    <string name="copied_message_text">Copied message text</string>
    <string name="empty_clipboard_can_write" />
    <string name="incorrect_qr_format">Incorrect QR format</string>
    <string name="setting_debug_options">setting_debug_options</string>
    <string name="select_recipients">Select recipients</string>
    <string name="connected_devices">Connected devices</string>
    <string name="selected_devices">Selected devices</string>
    <string name="this_device">This device</string>
    <string name="connect">Connect</string>
    <string name="your_devices">Your devices</string>
    <string name="ip_address">IP address</string>
    <string name="or_enter_ip_and_port_number_manually">Or enter IP and port number manually</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="notifications">Notifications</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="copied_IP">Copied IP</string>
    <string name="copied_IP_to_clipboard">Copied IP to clipboard</string>
    <string name="copy_IP">Copy IP</string>
    <string name="copy_message">Copy message</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="please_select_devices">Please select devices</string>
    <string name="disconnect">Disconnect</string>
    <string name="what_would_you_like_to_do_with_the_device">What would you like to do with the device?</string>
    <string name="device_actions">Device actions</string>
    <string name="message_actions">Message actions</string>
    <string name="what_would_you_like_to_do_with_the_message">What would you like to do with the message?</string>
    <string name="not_connected_to_network">You are not connected to a network. Please connect.</string>
    <string name="server_is_not_started">Server is not started</string>
    <string name="confirm">Confirm</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="no_devices_connected">No devices connected</string>
    <string name="airsend_is_working">AirSend is working</string>
    <string name="this_notification_ensures_airsend_does_not_get_killed">This notification ensures AirSend does not get killed</string>
</resources>
