<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/large"
        android:paddingTop="@dimen/large"
        android:paddingEnd="@dimen/large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large"
                android:layout_weight="1"
                android:text="Outgoing messages"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.IconOnly"
                android:id="@+id/btn_sent_messages"
                android:layout_width="52dp"
                android:layout_height="52dp"
                app:icon="@drawable/history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small"
                android:text="Select recipient" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdown_recipient"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_pick_recipient"
                    style="@style/Button.IconOnly"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:tooltipText="Select recipient"
                    android:visibility="gone"
                    app:icon="@drawable/device" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_message"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message"
                    android:maxHeight="100dp"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_paste_msg"
                style="@style/Button.IconOnly"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:tooltipText="Paste text into message field"
                app:icon="@drawable/paste" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:text="@string/send"
            app:icon="@drawable/ic_baseline_send_24"
            app:iconGravity="end" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incoming_messages"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete_messages"
                style="@style/Button.IconOnly"
                android:layout_width="52dp"
                android:layout_height="52dp"
                app:icon="@drawable/delete" />

        </LinearLayout>


        <TextView
            android:id="@+id/textin"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/received_none_yet"
            android:textIsSelectable="true"
            android:visibility="gone" />

    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/list_and_empty_text" />


</LinearLayout>