<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/large"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginBottom="8dp"
            android:text="@string/your_devices" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_server_status"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Server" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_start"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="Start"
                    app:icon="@drawable/play"
                    app:iconGravity="end" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_stop"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="Stop"
                    app:icon="@drawable/stop"
                    app:iconGravity="end" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_disconnect_all"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small"
                    android:text="Disconnect all"
                    app:icon="@drawable/link_off" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_connect_all"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Connect all"
                    app:icon="@drawable/link_plus" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_empty_rv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_devices_connected" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:fadingEdgeLength="@dimen/fading_edge_large_row"
                android:paddingStart="@dimen/large"
                android:paddingEnd="@dimen/large"
                android:paddingBottom="@dimen/large"
                android:requiresFadingEdge="vertical"
                tools:listitem="@layout/row_device" />
        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:windowBackground"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/button_receive"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="false"
                android:focusable="false"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/qrcode"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:rippleColor="@android:color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_device_info"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"

                android:clickable="false"
                android:focusable="false"
                android:text="@string/this_device"

                app:icon="@drawable/arrow_up"
                app:iconGravity="end"
                app:rippleColor="@android:color/transparent" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="24dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/ip_tv"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/pskTv"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textIsSelectable="true" />

            <ImageView
                android:id="@+id/image_view_qr"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/qrcode" />

        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginEnd="16dp"
        android:text="@string/connect"
        android:textColor="?colorOnPrimary"
        app:backgroundTint="?colorPrimary"
        app:icon="@drawable/plus"
        app:iconTint="?colorOnPrimary"
        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="top|end" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>